# memory-management

./: .clang-format  .gitignore  CMakeLists.txt  README.md  unique_ptr.hpp  unique_ptr_tests.cpp  valgrind-output.txt
01-exceptions/: 01-error-handling.md  02-exceptions.md  03-cost.md  month.cpp
02-memory-problems/: 01-allocation-problems.md  02-simple-question.md  03-homework.md  04-memory-corruption.md  index.html
03-good-practices/: 02-raii.md  03-rules.md  04-homework.md  index.html
04-memory/: 01-memory-map.md  02-stack-vs-heap.md  03-stack-allocation.md  04-stack-overflow.md  05-heap-allocation.md  06-new-expression.md  07-array-allocation.md  08-homework.md  index.html
05-smart-pointers/: 01-smart-ptrs.md  02-unique-ptr.md  03-shared-ptr.md  04-weak-ptr.md  05-auto-ptr.md  06-summary.md  07-best-practices.md  08-implementation-details.md  09-efficiency.md  10-homework.md  CMakeLists.txt  index.html  main.cpp  smart_pointers_summary.md  uniquePtr_ut.cpp  uniquePtr_ut.hpp
06-move-semantics/: 06-std-move.md  index.html
examples/: 01_dynamic_array_allocation.cpp  02_out_of_bounds_address.cpp  03_dangling_pointer.cpp  04_double_delete.cpp  05_null_pointer_dereference.cpp  06_freeing_stack_allocated_block.cpp  07_freeing_portion_of_dynamic_block.cpp  08_memory_leak.cpp  09_vector_leak.cpp  10_stack_overflow.cpp  CMakeLists.txt  exception.cpp
exercises/: CMakeLists.txt  FileHandler.cpp  FileHandler.hpp  FileOperations.cpp  LinkedList.cpp  LinkedList.hpp  List.cpp  MyUniquePtr.cpp  MyUniquePtr.hpp  MyUniquePtrTests.cpp  README.md  ResourceD.cpp  ResourceFactory.cpp  UniquePtr.cpp  UniquePtr.hpp  main.cpp  uniquPointer.cpp  valgrind-output.txt
exercises/src/: List.cpp  List.hpp  unique.hpp
exercises/tests/: ListTests.cpp
exercises/unique_ptr/: CMakeLists.txt  unique_ptr.cpp  unique_ptr.hpp  unique_ptr_tests.cpp
homework/: weak_ptr.hpp
homework/shared_ptr/: .clang-format  CMakeLists.txt  ControlBlock.hpp  Counter.hpp  CounterBlock.hpp  InvalidDereference.cpp  MakeShared-ut.cpp  MakeShared.hpp  README.md  ReferenceCounterBlock.hpp  Scooter.hpp  SharedControlBlock-ut.cpp  SharedControlBlock.hpp  SharedPointer-ut.cpp  SharedPointer.hpp  SharedPtr-ut.cpp  SharedPtr.hpp  WeakPointer.hpp  WeakPtr-ut.cpp  WeakPtr.hpp  bad_weak_ptr.hpp  control.cpp  control.hpp  controlBlock.hpp  controlObject.hpp  control_block.hpp  control_block_tests.cpp  deleter.hpp  exceptions.hpp  main.cpp  make_shared-ut.cpp  make_shared.hpp  make_shared_tests.cpp  my_shared_ptr.hpp  shared.cpp  shared.hpp  sharedControlBlock.hpp  sharedPtr-ut.cpp  sharedPtr.hpp  shared_ptr-ut.cpp  (+13 more)
homework/shared_ptr/.github/workflows/: main.yml
homework/shared_ptr/tests/: make_shared_efficiency.cpp  make_shared_tests.cpp  shared_ctor_efficiency.cpp  shared_tests.cpp  tests.cpp  weak_tests.cpp
homework/unique_ptr/: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  Data.hpp  Exceptions.cpp  Exceptions.hpp  InvalidDereference.hpp  MakeUnique.ut.cpp  NullPtrException.hpp  NullptrException.cpp  NullptrException.hpp  PtrIsNullptr.hpp  README.md  TestClass.hpp  TestingClass.cpp  TestingClass.hpp  UniquePointer.hpp  UniquePointer.ut.cpp  UniquePtr-ut.cpp  UniquePtr.cpp  UniquePtr.hpp  UniquePtr.ut.cpp  Unique_ptr.hpp  main.cpp  md_unique_ptr.hpp  my_unique_ptr.hpp  pq_unique_ptr.hpp  test.cpp  tests.cpp  uniqe_ptr.hpp  unique  unique-ut.cpp  uniquePTR.hpp  uniquePtr-ut.cpp  uniquePtr.hpp  unique_ptr-UT.cpp  unique_ptr-ut.cpp  unique_ptr.cpp  (+7 more)
homework/unique_ptr/.github/: module3.yml  uniquePtr.yml
homework/unique_ptr/.github/workflow/: module.yml
homework/unique_ptr/.github/workflows/: UniquePtr.yml  unique_ptr.yml
homework/unique_ptr/Tests/: tests.cpp  unique_ptr_tests.cpp
homework/unique_ptr/github/workflows/: uniquePointer.yml
homework/unique_ptr/gtest/: unique_ptrTest.cpp
homework/unique_ptr/inc/: unique_ptr.hpp
homework/unique_ptr/include/: UniquePtr.hpp
homework/unique_ptr/src/: main.cpp
homework/unique_ptr/test/: test.cpp
homework/unique_ptr/tests/: UniquePtr.ut.cpp  tests.cpp  unique-test.cpp
homework/unique_ptr/verbose/: main.cpp  unique_ptr_verbose.hpp
html/: 01-exceptions.html
intro/: 01_about_you.pl.md  02_about_lukasz.pl.md  03_contract.pl.md  about_lukasz.md  index.html  index.pl.html  pre-test-answers.md  pre-test.md
module1/: 01_memory_map.pl.md  02_stack_vs_heap.pl.md  03_stack_allocation.en.md  03_stack_allocation.pl.md  04_stack_overflow.en.md  04_stack_overflow.pl.md  05_heap_allocation.en.md  05_heap_allocation.pl.md  06_new_expression.en.md  06_new_expression.pl.md  07_array_allocation.en.md  07_array_allocation.pl.md  08_allocation_problems.pl.md  09_simple_question.en.md  09_simple_question.pl.md  10_raii.en.md  10_raii.pl.md  11_memory_corruption.en.md  11_memory_corruption.pl.md  homework.md  index.en.html  index.html  index.pl.html  memory_management.md  memory_management_agenda.md  memory_management_allocation_problems.md  memory_management_array_allocation.md  memory_management_introduction.md  memory_management_memory_map.md  memory_management_raii.md  memory_management_stack_allocation.md  memory_management_stack_overflow.md  memory_management_stack_vs_heap.md
module2/: 01_smart_ptrs.pl.md  02_unique_ptr.en.md  02_unique_ptr.pl.md  03_shared_ptr.pl.md  04_weak_ptr.pl.md  05_auto_ptr.pl.md  06_summary.pl.md  07_best_practices.en.md  07_best_practices.pl.md  08_implementation_details.en.md  08_implementation_details.pl.md  09_efficiency.en.md  09_efficiency.pl.md  homework.md  index.html  index.pl.html  smart_pointers_best_practices.md  smart_pointers_efficiency.md  smart_pointers_introduction.md  smart_pointers_shared_ptr.md  smart_pointers_smart_ptrs.md  smart_pointers_summary.md  smart_pointers_unique_ptr.md  (+1 more)
module3/: cost.md  (+6 more)
smartPtr/: A.cpp  A.hpp  CMakeLists.txt  ValgrindOutput  main.cpp  smartPtr.hpp
smartPtr/src/: A.cpp  A.hpp  main.cpp  smartPtr.hpp
smartPtr/tests/: smartPtrTests.cpp  test_main.cpp
tests/make_shared/: CMakeLists.txt  make_sharedTests.cpp
tests/weak_ptr_student/: CMakeLists.txt  cmake_config.sh
(+71 files in other folders)
